tests/expect/codefile-invalid-hex.err
Error: 'tests/codefile-invalid-hex.ibcm:3:1' Invalid opcode hexadecimal

    ghij
    ^
